<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DescActivity"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/item_detail_logo"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitCenter"
            android:src="@drawable/samator"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp">

                <TextView
                        android:id="@+id/item_detail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:text="@string/surabaya_bhayangkara_samator"
                        android:textAlignment="center"
                        android:layout_marginStart="12dp"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="12dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="12dp">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/loc"/>

                    <TextView
                            android:id="@+id/item_detail_basecamp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/surabaya"
                            android:textAlignment="center"
                            android:layout_gravity="center_vertical"
                            android:textSize="18sp"/>

                </LinearLayout>

            </LinearLayout>

            <View
                    android:layout_width="350dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimaryDark"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team_coach"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                <View
                        android:layout_width="85dp"
                        android:layout_height="1dp"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:background="@color/colorPrimary"/>

                <TextView
                        android:id="@+id/item_detail_coach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/surabaya_bhayangkara_samator"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team_captain"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:background="@color/colorPrimary"/>

                <TextView
                        android:id="@+id/item_detail_captain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/surabaya_bhayangkara_samator"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sponsor"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:background="@color/colorPrimary"/>

                <TextView
                        android:id="@+id/item_detail_sponsor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/surabaya_bhayangkara_samator"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team_description"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:background="@color/colorPrimary"/>

                <TextView
                        android:id="@+id/item_detail_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/surabaya_bhayangkara_samator"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>